--- a/1_4_Gissa_Talet/1_4_Gissa_Talet/1_4_Gissa_Talet.csproj
+++ b/1_4_Gissa_Talet/1_4_Gissa_Talet/1_4_Gissa_Talet.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SecretNumber.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
