--- a/1_4_Gissa_Talet/1_4_Gissa_Talet/1_4_Gissa_Talet.csproj
+++ b/1_4_Gissa_Talet/1_4_Gissa_Talet/1_4_Gissa_Talet.csproj
@@ -106,6 +106,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Web.config" />
     <Content Include="Default.aspx" />
   </ItemGroup>
